erDiagram

    users {
        bigint id PK
        string name
        string email UK
        timestamp email_verified_at
        string password
        string role
        string requested_role
        string remember_token
        timestamp created_at
        timestamp updated_at
    }

    sessions {
        string id PK
        bigint user_id FK
        string ip_address
        text user_agent
        longtext payload
        integer last_activity
    }

    personal_access_tokens {
        bigint id PK
        string tokenable_type
        bigint tokenable_id
        string name
        string token UK
        text abilities
        timestamp last_used_at
        timestamp expires_at
        timestamp created_at
        timestamp updated_at
    }

    ebis_planning_orders {
        bigint id PK
        string star_click_id
        string track_id
        string ticket_id
        string star_click_status
        string status_alokasi_alpro
        string id_odp_alokasi_alpro
        string nama_odp_alokasi_alpro
        string reservation_id_alokasi_alpro
        string nama_pengguna_alokasi_alpro
        string username_nik_alokasi_alpro
        decimal latitude
        decimal longitude
        string sales_code
        text remark
        string segment
        string cfu
        string source_app
        date disurvey_pada
        date estimasi_go_live
        date real_go_live
        date initial_date
        date finish_install_date
        string regional
        string witel
        string datel
        string sto
        string wok
        string nama_customer
        string status_order
        string progres
        timestamp tanggal_update_progres
        string validasi_planning
        string ihld_lop_id
        string eproposal_lop_id
        string kode_program
        string nama_proyek
        string tipe_desain
        integer total_boq
        decimal capex_per_port
        integer odp_total
        integer total_port
        string jenis_program
        string batch_program
        string status_eproposal
        string status_tomps
        string status_sap
        string status_proyek
        date tanggal_submitted_eproposal
        date tanggal_inisiasi_tomps
        date tanggal_validasi_abd_tomps
        date tanggal_go_live_tomps
        string kategori_mitra
        string nama_mitra
        decimal revenue_plan
        year tahun
        string kategori
        timestamp created_at
        timestamp updated_at
    }

    ebis_manual_inputs {
        bigint id PK
        string nde_jt
        string star_click_id
        string nomor_batch
        string nama_customer
        string nama_mitra
        text alamat_pelanggan
        string telepon_pelanggan
        string tikor_pelanggan
        string datel
        string sto
        string progres
        text keterangan
        json data
        datetime tanggal_update_progres
        text link_dokumen
        timestamp created_at
        timestamp updated_at
    }

    ebis_deployment_progress_logs {
        bigint id PK
        bigint ebis_manual_input_id FK
        string progres
        json data
        timestamp created_at
    }

    ebis_planning_progress_logs {
        bigint id PK
        bigint ebis_planning_order_id FK
        bigint user_id FK
        string progres
        text keterangan
        json data
        timestamp created_at
        timestamp updated_at
    }

    master_datels {
        bigint id PK
        string nama_datel UK
        timestamp created_at
        timestamp updated_at
    }

    master_stos {
        bigint id PK
        string nama_sto UK
        timestamp created_at
        timestamp updated_at
    }

    master_mitras {
        bigint id PK
        string nama_mitra UK
        timestamp created_at
        timestamp updated_at
    }

    %% ── RELASI ────────────────────────────────────────────────

    users ||--o{ sessions : "memiliki"
    users ||--o{ personal_access_tokens : "tokenable"
    users ||--o{ ebis_planning_progress_logs : "mencatat"

    ebis_planning_orders ||--o{ ebis_planning_progress_logs : "memiliki log"
    ebis_manual_inputs ||--o{ ebis_deployment_progress_logs : "memiliki log"

    master_datels ||--o{ ebis_manual_inputs : "referensi datel"
    master_datels ||--o{ ebis_planning_orders : "referensi datel"

    master_stos ||--o{ ebis_manual_inputs : "referensi sto"
    master_stos ||--o{ ebis_planning_orders : "referensi sto"

    master_mitras ||--o{ ebis_manual_inputs : "referensi mitra"
    master_mitras ||--o{ ebis_planning_orders : "referensi mitra"
